syntax = "proto3";

option java_multiple_files = true;
option java_package = "security.service";
option java_outer_classname = "SecurityImpl";
 
package security;

service securityServices {
	rpc UnlockDoor(UnlockRequest) returns (UnlockResponse){};
	rpc EmergencyUnlock(EmUnlockRequest) returns (stream EmUnlockResponse){};
}

message UnlockRequest {
	int32 codeEntered = 1;
}

message UnlockResponse {
	string lockStatus = 1;
}

message EmUnlockRequest {
	int32 codeEntered = 1;
}

message EmUnlockResponse {
	string lockStatus = 1;
}